--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body {
     /* border: 1px solid red; */
     font-weight: 600;
     font-size: 20px;
+    text-align: center;
 }
 
 /* I USE THE RED BORDERS TO VISUALIZE SPACE / AREA AVAILABLE / NEEDED */
