--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     background: darkcyan;
     color: white;
     padding: 20px;
-    width: 80vw;
+    width: 50vw;
     border-radius: 10px;
     /* border: 1px solid red; */
 }
@@ -22,15 +22,25 @@ body {
     text-align: center;
 }
 
+label {
+    /* border: 1px solid red; */
+    font-size: 20px;
+    margin: 10px 0;
+    display: block;
+    text-align: center;
+}
+
 
 .input {
     /* border: 1px solid red; */
+    display: block;
     color: gray;
     font-size: 20px;
     font-style: italic;
-    width: 100%;
+    width: 80%;
     height: 30px;
-    margin: 10px 10px 10px 0;
+    margin: 0 auto;
+   
 }
 
 .payment {
